# falcon.string_literal

./: .travis.yml  CMakeDefinitions.txt  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/falcon/: string_id.hpp
include/falcon/container/: string_literal.hpp  string_literal_fwd.hpp
module/falcon/cxx/: string_view.hpp
module/falcon/functional/: fnv.hpp
module/falcon/iostreams/: ostream_insert.hpp
test/: string_literal.cpp
